# blog-rs

./: Cargo.toml
src/: main.rs  stress.rs
templates/: base.html  index.html  posts.html
