[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blog-rs"
path = "src/main.rs"

[[bin]]
name = "stress-rs"
path = "src/stress.rs"

[dependencies]
anyhow = "1"
askama = {version="0.12.0", features=["markdown"]}
axum =  "0.6.4"
clap = { version = "4.3.3", features = ["derive"] }
htb = "0.2.2"
parking_lot = "0.12"
quantiles = "0.7.1"
reqwest = "0.11.18"
tokio = {version="1.13.0", features = ["macros", "rt-multi-thread", "signal"]}
tower-http = {version = "0.4", features=["full"]}

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
